--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
-#Fri Jun 16 13:07:51 CST 2017
+#Fri Jun 16 20:53:36 CST 2017
 eclipse.preferences.version=1
+encoding//WebRoot/WeixinPages/articleManage.jsp=UTF-8
 encoding//WebRoot/login.jsp=UTF-8
