--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
-#Fri Jun 16 20:53:36 CST 2017
+#Sun Jun 18 20:31:05 CST 2017
 eclipse.preferences.version=1
 encoding//WebRoot/WeixinPages/articleManage.jsp=UTF-8
+encoding//WebRoot/WeixinPages/common/js/mui.min.js=UTF-8
 encoding//WebRoot/login.jsp=UTF-8
