--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,7 @@
-#Fri Jun 23 15:34:35 CST 2017
+#Sun Jun 25 12:40:41 CST 2017
 eclipse.preferences.version=1
 encoding//WebRoot/WeixinPages/articleEditMain.jsp=UTF-8
 encoding//WebRoot/WeixinPages/common/js/mui.min.js=UTF-8
+encoding//WebRoot/WeixinPages/common/js/wangEditor-mobile.js=UTF-8
 encoding//WebRoot/login.jsp=UTF-8
 encoding//WebRoot/test.jsp=UTF-8
